all plots but figure 5 missing now

--- a/services/dy-2Dgraph/use-cases/kember/kember.ipynb
+++ b/services/dy-2Dgraph/use-cases/kember/kember.ipynb
@@ -141,6 +141,8 @@
    "source": [
     "import random\n",
     "\n",
+    "SLICING = 10\n",
+    "\n",
     "def create_graph(data_frame, title, x_axis_title, colors=None, \n",
     "                 lineWidths=None, show_legend=True, names=None, annotations=None, **kwargs):\n",
     "    if not names:\n",
@@ -153,8 +155,10 @@
     "        \n",
     "    data = [        \n",
     "        go.Scatter(\n",
-    "            x=data_frame[data_frame.columns[0]],\n",
-    "            y=data_frame[data_frame.columns[i]], \n",
+    "            x=data_frame.iloc[0::SLICING,0],\n",
+    "            y=data_frame.iloc[0::SLICING,i],\n",
+    "            #x=data_frame[data_frame.columns[0]],\n",
+    "            #y=data_frame[data_frame.columns[i]], \n",
     "            opacity=0.8,                        \n",
     "            name=names[i-1],\n",
     "            marker=dict(\n",
@@ -193,7 +197,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "hide_input": true
+    "hide_input": false
    },
    "outputs": [],
    "source": [
@@ -376,14 +380,14 @@
     "data = [   \n",
     "    \n",
     "        go.Scattergl(\n",
-    "            x=outputController[outputController.columns[0]],\n",
-    "            y=[i] * data_scaled.columns.size, \n",
+    "            x=outputController[outputController.columns[0]].iloc[0::SLICING],\n",
+    "            y=i, #[i] * data_scaled.columns.size, \n",
     "            opacity=0.5,                        \n",
     "            name=data_scaled.columns[i],\n",
     "            mode='markers',\n",
     "            marker=dict(\n",
     "                size=1,\n",
-    "                color = data_scaled[data_scaled.columns[i]], #set color equal to a variable\n",
+    "                color = data_scaled[data_scaled.columns[i]].iloc[0::SLICING], #set color equal to a variable\n",
     "                colorscale='Greys',\n",
     "                showscale=True\n",
     "            )\n",
@@ -422,11 +426,43 @@
     "names = ['Cardiac','Intrathoracic','Central']\n",
     "data = outputController.filter(items=[outputController.columns[i] for i in average_neighbour_importance_columns])\n",
     "data.iloc[:,1:] = data.iloc[:,1:].div(outputController.iloc[:,ncols-1], axis=0)\n",
+    "\n",
+    "\n",
+    "ipos = 0.32\n",
+    "rpos = ipos\n",
+    "annotations = [\n",
+    "    {\"text\":{\"x\":2800, \"y\":ipos, \"value\":\"I<sub>1<sub>\", \"color\":\"red\"}},    \n",
+    "    {\"text\":{\"x\":6300, \"y\":ipos, \"value\":\"I<sub>2<sub>\", \"color\":\"red\"}},\n",
+    "    {\"text\":{\"x\":9800, \"y\":ipos, \"value\":\"I<sub>3<sub>\", \"color\":\"red\"}},\n",
+    "    {\"text\":{\"x\":4800, \"y\":.35, \"value\":\"D<sub>1<sub>\", \"color\":\"black\"}},\n",
+    "    {\"text\":{\"x\":8300, \"y\":.35, \"value\":\"D<sub>2<sub>\", \"color\":\"black\"}},\n",
+    "    {\"text\":{\"x\":11800, \"y\":.35, \"value\":\"D<sub>3<sub>\", \"color\":\"black\"}},\n",
+    "    {\"text\":{\"x\":3800, \"y\":rpos, \"value\":\"R<sub>1<sub>\", \"color\":\"blue\"}},\n",
+    "    {\"text\":{\"x\":7300, \"y\":rpos, \"value\":\"R<sub>2<sub>\", \"color\":\"blue\"}},\n",
+    "    {\"text\":{\"x\":10800, \"y\":rpos, \"value\":\"R<sub>3<sub>\", \"color\":\"blue\"}},\n",
+    "]\n",
+    "\n",
+    "line_opacity = .5\n",
+    "shapes = [\n",
+    "    {\"type\":\"line\",\"x0\":2500,\"y0\":0,\"x1\":2500,\"y1\":.8,\"opacity\":line_opacity,\"line\":{\"color\":\"red\",\"width\":1.5}},\n",
+    "    {\"type\":\"line\",\"x0\":6000,\"y0\":0,\"x1\":6000,\"y1\":.8,\"opacity\":line_opacity,\"line\":{\"color\":\"red\",\"width\":1.5}},\n",
+    "    {\"type\":\"line\",\"x0\":9500,\"y0\":0,\"x1\":9500,\"y1\":.8,\"opacity\":line_opacity,\"line\":{\"color\":\"red\",\"width\":1.5}},\n",
+    "    {\"type\":\"line\",\"x0\":4500,\"y0\":0,\"x1\":4500,\"y1\":.8,\"opacity\":line_opacity,\"line\":{\"color\":\"black\",\"width\":1.5}},\n",
+    "    {\"type\":\"line\",\"x0\":8000,\"y0\":0,\"x1\":8000,\"y1\":.8,\"opacity\":line_opacity,\"line\":{\"color\":\"black\",\"width\":1.5}},\n",
+    "    {\"type\":\"line\",\"x0\":11500,\"y0\":0,\"x1\":11500,\"y1\":.8,\"opacity\":line_opacity,\"line\":{\"color\":\"black\",\"width\":1.5}},\n",
+    "    {\"type\":\"line\",\"x0\":3500,\"y0\":0,\"x1\":3500,\"y1\":.8,\"opacity\":line_opacity,\"line\":{\"color\":\"blue\",\"width\":1.5}},\n",
+    "    {\"type\":\"line\",\"x0\":7000,\"y0\":0,\"x1\":7000,\"y1\":.8,\"opacity\":line_opacity,\"line\":{\"color\":\"blue\",\"width\":1.5}},\n",
+    "    {\"type\":\"line\",\"x0\":10500,\"y0\":0,\"x1\":10500,\"y1\":.8,\"opacity\":line_opacity,\"line\":{\"color\":\"blue\",\"width\":1.5}},\n",
+    "]\n",
+    "\n",
     "create_graph(data_frame=data, \n",
     "             title=title, x_axis_title=\"time(sec)\", show_legend=True,\n",
     "            colors=colors,\n",
     "            lineWidths=lineWidth,\n",
-    "            names=names)"
+    "            names=names,\n",
+    "            annotations=annotations,\n",
+    "            yaxis=dict(range=[0,0.4]),\n",
+    "            shapes=shapes)"
    ]
   },
   {
