autorun notebook completeted heatmap code

--- a/services/dy-2Dgraph/use-cases/kember/kember.ipynb
+++ b/services/dy-2Dgraph/use-cases/kember/kember.ipynb
@@ -4,6 +4,19 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "hide_input": true,
+    "init_cell": true
+   },
+   "outputs": [],
+   "source": [
+    "%%javascript\n",
+    "$('#menubar').toggle();"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
     "extensions": {
      "jupyter_dashboards": {
       "version": 1,
@@ -15,7 +28,8 @@
       }
      }
     },
-    "hide_input": false
+    "hide_input": true,
+    "init_cell": true
    },
    "outputs": [],
    "source": [
@@ -43,7 +57,8 @@
       }
      }
     },
-    "hide_input": false
+    "hide_input": true,
+    "init_cell": true
    },
    "outputs": [],
    "source": [
@@ -92,7 +107,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hide_input": true,
+    "init_cell": true
+   },
    "outputs": [],
    "source": [
     "# define variables\n",
@@ -135,7 +153,8 @@
       }
      }
     },
-    "hide_input": false
+    "hide_input": true,
+    "init_cell": true
    },
    "outputs": [],
    "source": [
@@ -197,7 +216,8 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "hide_input": false
+    "hide_input": true,
+    "init_cell": true
    },
    "outputs": [],
    "source": [
@@ -247,14 +267,15 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "hide_input": false
+    "hide_input": true,
+    "init_cell": true
    },
    "outputs": [],
    "source": [
     "title = \"Parasympathetic Cell Activity: Cardiac Level\"\n",
     "FirstParasympathetic=500-1\n",
     "start_index = FirstCellPosition+0*TotalNumberOfCells+FirstParasympathetic\n",
-    "final_index = FirstCellPosition+0*TotalNumberOfCells+NumberOfCells(1)-1\n",
+    "final_index = FirstCellPosition+0*TotalNumberOfCells+NumberOfCells(1)-1+1\n",
     "parasympathetic_cell_activity_columns = [0]\n",
     "parasympathetic_cell_activity_columns.extend(range(start_index, final_index))\n",
     "parasympathetic_cell_activity_data = outputController.filter(items=[outputController.columns[i] for i in parasympathetic_cell_activity_columns])\n",
@@ -267,7 +288,8 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "hide_input": false
+    "hide_input": true,
+    "init_cell": true
    },
    "outputs": [],
    "source": [
@@ -275,17 +297,17 @@
     "cell_activity_columns = [0]\n",
     "# cardiac\n",
     "start_index = FirstCellPosition+0*TotalNumberOfCells\n",
-    "final_index = FirstCellPosition+0*TotalNumberOfCells+NumberOfCells(1)-1\n",
+    "final_index = FirstCellPosition+0*TotalNumberOfCells+NumberOfCells(1)-1+1\n",
     "cell_activity_columns.extend(range(start_index, final_index))\n",
     "colors = [\"red\"]*(final_index - start_index)\n",
     "# intrathoracic\n",
     "start_index = FirstCellPosition+0*TotalNumberOfCells+NumberOfCells(1)\n",
-    "final_index = FirstCellPosition+0*TotalNumberOfCells+NumberOfCells(1)+NumberOfCells(2)-1\n",
+    "final_index = FirstCellPosition+0*TotalNumberOfCells+NumberOfCells(1)+NumberOfCells(2)-1+1\n",
     "cell_activity_columns.extend(range(start_index, final_index))\n",
     "colors.extend([\"green\"]*(final_index - start_index))\n",
     "# central\n",
     "start_index = FirstCellPosition+0*TotalNumberOfCells+NumberOfCells(1)+NumberOfCells(2)\n",
-    "final_index = FirstCellPosition+0*TotalNumberOfCells+NumberOfCells(1)+NumberOfCells(2)+NumberOfCells(3)-1\n",
+    "final_index = FirstCellPosition+0*TotalNumberOfCells+NumberOfCells(1)+NumberOfCells(2)+NumberOfCells(3)-1+1\n",
     "cell_activity_columns.extend(range(start_index, final_index))\n",
     "colors.extend([\"blue\"]*(final_index - start_index))\n",
     "\n",
@@ -298,24 +320,27 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hide_input": true,
+    "init_cell": true
+   },
    "outputs": [],
    "source": [
     "title = \"Heart Throughput: Cardiac(r), Intrathoracic(g), Central(b)\"\n",
     "heart_throughput_columns = [0]\n",
     "# cardiac\n",
     "start_index = FirstCellPosition+1*TotalNumberOfCells\n",
-    "final_index = FirstCellPosition+1*TotalNumberOfCells+NumberOfCells(1)-1\n",
+    "final_index = FirstCellPosition+1*TotalNumberOfCells+NumberOfCells(1)-1+1\n",
     "heart_throughput_columns.extend(range(start_index, final_index))\n",
     "colors = [\"red\"]*(final_index - start_index)\n",
     "# intrathoracic\n",
     "start_index = FirstCellPosition+1*TotalNumberOfCells+NumberOfCells(1)\n",
-    "final_index = FirstCellPosition+1*TotalNumberOfCells+NumberOfCells(1)+NumberOfCells(2)-1\n",
+    "final_index = FirstCellPosition+1*TotalNumberOfCells+NumberOfCells(1)+NumberOfCells(2)-1+1\n",
     "heart_throughput_columns.extend(range(start_index, final_index))\n",
     "colors.extend([\"green\"]*(final_index - start_index))\n",
     "# central\n",
     "start_index = FirstCellPosition+1*TotalNumberOfCells+NumberOfCells(1)+NumberOfCells(2)\n",
-    "final_index = FirstCellPosition+1*TotalNumberOfCells+NumberOfCells(1)+NumberOfCells(2)+NumberOfCells(3)-1\n",
+    "final_index = FirstCellPosition+1*TotalNumberOfCells+NumberOfCells(1)+NumberOfCells(2)+NumberOfCells(3)-1+1\n",
     "heart_throughput_columns.extend(range(start_index, final_index))\n",
     "colors.extend([\"blue\"]*(final_index - start_index))\n",
     "\n",
@@ -328,24 +353,27 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hide_input": true,
+    "init_cell": true
+   },
    "outputs": [],
    "source": [
     "title = \"Blood Throughput: Cardiac(r), Intrathoracic(g), Central(b)\"\n",
     "blood_throughput_columns = [0]\n",
     "# cardiac\n",
     "start_index = FirstCellPosition+2*TotalNumberOfCells\n",
-    "final_index = FirstCellPosition+2*TotalNumberOfCells+NumberOfCells(1)-1\n",
+    "final_index = FirstCellPosition+2*TotalNumberOfCells+NumberOfCells(1)-1+1\n",
     "blood_throughput_columns.extend(range(start_index, final_index))\n",
     "colors = [\"red\"]*(final_index - start_index)\n",
     "# intrathoracic\n",
     "start_index = FirstCellPosition+2*TotalNumberOfCells+NumberOfCells(1)\n",
-    "final_index = FirstCellPosition+2*TotalNumberOfCells+NumberOfCells(1)+NumberOfCells(2)-1\n",
+    "final_index = FirstCellPosition+2*TotalNumberOfCells+NumberOfCells(1)+NumberOfCells(2)-1+1\n",
     "blood_throughput_columns.extend(range(start_index, final_index))\n",
     "colors.extend([\"green\"]*(final_index - start_index))\n",
     "# central\n",
     "start_index = FirstCellPosition+2*TotalNumberOfCells+NumberOfCells(1)+NumberOfCells(2)\n",
-    "final_index = FirstCellPosition+2*TotalNumberOfCells+NumberOfCells(1)+NumberOfCells(2)+NumberOfCells(3)-1\n",
+    "final_index = FirstCellPosition+2*TotalNumberOfCells+NumberOfCells(1)+NumberOfCells(2)+NumberOfCells(3)-1+1\n",
     "blood_throughput_columns.extend(range(start_index, final_index))\n",
     "colors.extend([\"blue\"]*(final_index - start_index))\n",
     "\n",
@@ -358,7 +386,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hide_input": true,
+    "init_cell": true
+   },
    "outputs": [],
    "source": [
     "#carpet plot full network data set\n",
@@ -371,38 +402,44 @@
     "title = \"Cell Activity Level, Heart and Blood Throughput {layersnumber} Layers and {cellsperlayer} Cells per Layer'\".format(layersnumber=NumberOfLayers, cellsperlayer=\" \".join(map(str,_NumberOfCells)))\n",
     "carpet_plot_columns = [0]\n",
     "start_index = FirstCellPosition\n",
-    "final_index = FirstCellPosition+TotalNumberOfCells-1\n",
+    "final_index = FirstCellPosition+TotalNumberOfCells-1+1\n",
     "carpet_plot_columns.extend(range(start_index, final_index))\n",
     "\n",
     "# this does not work with plotly, too much memory involved here\n",
-    "f = lambda x: 50.0*fix(x)\n",
+    "f = lambda x: fix(50.0*x)\n",
     "data_scaled = outputController.filter(items=[outputController.columns[i] for i in range(start_index, final_index)]).applymap(f)\n",
-    "data = [   \n",
-    "    \n",
-    "        go.Scattergl(\n",
-    "            x=outputController[outputController.columns[0]].iloc[0::SLICING],\n",
-    "            y=i, #[i] * data_scaled.columns.size, \n",
-    "            opacity=0.5,                        \n",
-    "            name=data_scaled.columns[i],\n",
-    "            mode='markers',\n",
-    "            marker=dict(\n",
-    "                size=1,\n",
-    "                color = data_scaled[data_scaled.columns[i]].iloc[0::SLICING], #set color equal to a variable\n",
-    "                colorscale='Greys',\n",
-    "                showscale=True\n",
-    "            )\n",
-    "        ) for i in range(0,data_scaled.columns.size)\n",
-    "    ]\n",
+    "#data_scaled.insert(0, \"time\", outputController[outputController.columns[0]])\n",
+    "data_scaled = data_scaled.transpose()\n",
+    "#print(data_scaled)\n",
+    "\n",
+    "trace = go.Heatmap(\n",
+    "    z=data_scaled.as_matrix(),\n",
+    "    x=outputController.iloc[:,0],\n",
+    "    y=[i for i in range(1800)],\n",
+    "    colorscale=\"Greys\",\n",
+    ")\n",
+    "\n",
+    "\n",
+    "#trace = go.Heatmap(\n",
+    "#    z=data_scaled.values.tolist(),\n",
+    "#    x=outputController.iloc[:,0],\n",
+    "#    y=[i for i in range(1800)],\n",
+    "#    colorscale=\"Greys\",\n",
+    "#    transpose=True,\n",
+    "#)\n",
+    "\n",
+    "data = [trace]\n",
     "\n",
     "layout = go.Layout(\n",
     "    title=title, \n",
     "    showlegend=False,\n",
     "    xaxis=dict(\n",
-    "        title=None\n",
+    "        side=\"top\",\n",
     "    ),\n",
     "    yaxis=dict(\n",
-    "        #range=[0,.5]    \n",
-    "    ))\n",
+    "        autorange=\"reversed\",\n",
+    "    )\n",
+    ")\n",
     "fig = go.Figure(data=data, layout=layout)\n",
     "offline.iplot(fig, config={\"displayModeBar\": False})\n"
    ]
@@ -410,7 +447,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hide_input": true,
+    "init_cell": true
+   },
    "outputs": [],
    "source": [
     "#plot layer average neighbour importance (repeated on next figure)\n",
@@ -469,7 +509,8 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "hide_input": false
+    "hide_input": true,
+    "init_cell": true
    },
    "outputs": [],
    "source": [
@@ -494,6 +535,7 @@
   }
  ],
  "metadata": {
+  "celltoolbar": "Initialization Cell",
   "extensions": {
    "jupyter_dashboards": {
     "activeView": "grid_default",
