added button to show/hide raw code added auto slicing of data with a max display of 50k points for now all graphs are in now

--- a/services/dy-2Dgraph/use-cases/kember/kember.ipynb
+++ b/services/dy-2Dgraph/use-cases/kember/kember.ipynb
@@ -4,7 +4,33 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "hide_input": true,
+    "hideoutput": true,
+    "init_cell": true
+   },
+   "outputs": [],
+   "source": [
+    "from IPython.display import HTML\n",
+    "\n",
+    "HTML('''<script>\n",
+    "code_show=true; \n",
+    "function code_toggle() {\n",
+    " if (code_show){\n",
+    " $('div.input').hide();\n",
+    " } else {\n",
+    " $('div.input').show();\n",
+    " }\n",
+    " code_show = !code_show\n",
+    "} \n",
+    "$( document ).ready(code_toggle);\n",
+    "</script>\n",
+    "<form action=\"javascript:code_toggle()\"><input type=\"submit\" value=\"Click here to toggle on/off the raw code.\"></form>''')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "hide_input": false,
     "init_cell": true
    },
    "outputs": [],
@@ -160,7 +186,7 @@
    "source": [
     "import random\n",
     "\n",
-    "SLICING = 10\n",
+    "MAX_AMOUNT_OF_POINTS_TO_DISPLAY = 50000\n",
     "\n",
     "def create_graph(data_frame, title, x_axis_title, colors=None, \n",
     "                 lineWidths=None, show_legend=True, names=None, annotations=None, **kwargs):\n",
@@ -171,13 +197,14 @@
     "    if not colors:\n",
     "        default_colors = [\"black\", \"red\", \"orange\",\"green\",\"blue\"]\n",
     "        colors = [default_colors[random.randrange(0, len(default_colors))] for i in (data_frame.columns.size-1)]\n",
-    "        \n",
+    "\n",
+    "    # try to do some \"intelligent\" slicing to reduce memory footprint when rendering\n",
+    "    (nrows, ncols) = data_frame.shape\n",
+    "    SLICING=max(1, round(nrows * ncols / MAX_AMOUNT_OF_POINTS_TO_DISPLAY))\n",
     "    data = [        \n",
     "        go.Scatter(\n",
     "            x=data_frame.iloc[0::SLICING,0],\n",
     "            y=data_frame.iloc[0::SLICING,i],\n",
-    "            #x=data_frame[data_frame.columns[0]],\n",
-    "            #y=data_frame[data_frame.columns[i]], \n",
     "            opacity=0.8,                        \n",
     "            name=names[i-1],\n",
     "            marker=dict(\n",
@@ -200,8 +227,13 @@
     "            ) for note in annotations if \"text\" in note]\n",
     "        )\n",
     "\n",
+    "    graph_title = title\n",
+    "    if SLICING > 1:\n",
+    "        size_reduction_text = \"<br><sub>(data downsampled for rendering by factor %s)<sub>\" %(str(SLICING))\n",
+    "        graph_title = graph_title + size_reduction_text\n",
+    "        \n",
     "    layout = go.Layout(\n",
-    "        title=title, \n",
+    "        title=graph_title, \n",
     "        showlegend=show_legend,\n",
     "        xaxis=dict(\n",
     "            title=x_axis_title\n",
@@ -209,7 +241,37 @@
     "        **kwargs\n",
     "        )\n",
     "    fig = go.Figure(data=data, layout=layout)\n",
-    "    offline.iplot(fig, config={\"displayModeBar\": False})"
+    "    offline.iplot(fig, config={\"displayModeBar\": False})\n",
+    "    \n",
+    "def create_heatmap(data_frame, title, x_axis, y_axis):\n",
+    "    (nrows, ncols) = data_frame.shape\n",
+    "    SLICING=max(1, round(nrows * ncols / MAX_AMOUNT_OF_POINTS_TO_DISPLAY))\n",
+    "    trace = go.Heatmap(\n",
+    "        z=data_frame.iloc[:,0::SLICING].as_matrix(),\n",
+    "        x=x_axis.iloc[0::SLICING],\n",
+    "        y=y_axis,\n",
+    "        colorscale=\"Greys\",\n",
+    "    )\n",
+    "\n",
+    "    data = [trace]\n",
+    "\n",
+    "    graph_title = title\n",
+    "    if SLICING > 1:\n",
+    "        size_reduction_text = \"<br><sub>(data downsampled for rendering by factor %s)<sub>\" %(str(SLICING))\n",
+    "        graph_title = graph_title + size_reduction_text\n",
+    "        \n",
+    "    layout = go.Layout(\n",
+    "        title=graph_title, \n",
+    "        showlegend=False,\n",
+    "        xaxis=dict(\n",
+    "            side=\"top\",\n",
+    "        ),\n",
+    "        yaxis=dict(\n",
+    "            autorange=\"reversed\",\n",
+    "        )\n",
+    "    )\n",
+    "    fig = go.Figure(data=data, layout=layout)\n",
+    "    offline.iplot(fig, config={\"displayModeBar\": False})\n"
    ]
   },
   {
@@ -387,7 +449,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "hide_input": true,
+    "hide_input": false,
     "init_cell": true
    },
    "outputs": [],
@@ -410,38 +472,9 @@
     "data_scaled = outputController.filter(items=[outputController.columns[i] for i in range(start_index, final_index)]).applymap(f)\n",
     "#data_scaled.insert(0, \"time\", outputController[outputController.columns[0]])\n",
     "data_scaled = data_scaled.transpose()\n",
-    "#print(data_scaled)\n",
     "\n",
-    "trace = go.Heatmap(\n",
-    "    z=data_scaled.as_matrix(),\n",
-    "    x=outputController.iloc[:,0],\n",
-    "    y=[i for i in range(1800)],\n",
-    "    colorscale=\"Greys\",\n",
-    ")\n",
-    "\n",
-    "\n",
-    "#trace = go.Heatmap(\n",
-    "#    z=data_scaled.values.tolist(),\n",
-    "#    x=outputController.iloc[:,0],\n",
-    "#    y=[i for i in range(1800)],\n",
-    "#    colorscale=\"Greys\",\n",
-    "#    transpose=True,\n",
-    "#)\n",
-    "\n",
-    "data = [trace]\n",
-    "\n",
-    "layout = go.Layout(\n",
-    "    title=title, \n",
-    "    showlegend=False,\n",
-    "    xaxis=dict(\n",
-    "        side=\"top\",\n",
-    "    ),\n",
-    "    yaxis=dict(\n",
-    "        autorange=\"reversed\",\n",
-    "    )\n",
-    ")\n",
-    "fig = go.Figure(data=data, layout=layout)\n",
-    "offline.iplot(fig, config={\"displayModeBar\": False})\n"
+    "create_heatmap(data_frame=data_scaled, x_axis=outputController.iloc[:,0], y_axis=[i for i in range(1800)], title=title)\n",
+    "\n"
    ]
   },
   {
