fixed JS added hide_input

--- a/services/dy-2Dgraph/use-cases/kember/kember.ipynb
+++ b/services/dy-2Dgraph/use-cases/kember/kember.ipynb
@@ -30,13 +30,13 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "hide_input": false,
+    "hide_input": true,
     "init_cell": true
    },
    "outputs": [],
    "source": [
     "%%javascript\n",
-    "$('#menubar').toggle();"
+    "$('#menubar').hide();"
    ]
   },
   {
@@ -449,7 +449,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "hide_input": false,
+    "hide_input": true,
     "init_cell": true
    },
    "outputs": [],
