upgraded plotly to 3.3 upgraded pandas to 0.23

--- a/services/dy-2Dgraph/use-cases/cc/cc-oned/notebook/cc_oned.ipynb
+++ b/services/dy-2Dgraph/use-cases/cc/cc-oned/notebook/cc_oned.ipynb
@@ -2,38 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {
     "hideoutput": true,
     "init_cell": true
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<script>\n",
-       "code_show=true; \n",
-       "function code_toggle() {\n",
-       " if (code_show){\n",
-       " $('div.input').hide();\n",
-       " } else {\n",
-       " $('div.input').show();\n",
-       " }\n",
-       " code_show = !code_show\n",
-       "} \n",
-       "$( document ).ready(code_toggle);\n",
-       "</script>\n",
-       "<form action=\"javascript:code_toggle()\"><input type=\"submit\" value=\"Click here to toggle on/off the raw code.\"></form>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "execution_count": 32,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from IPython.display import HTML\n",
     "\n",
@@ -68,8 +42,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "extensions": {
-    },
+    "extensions": {},
     "hide_input": true,
     "init_cell": true
    },
@@ -85,12 +58,10 @@
     "    data = [        \n",
     "            go.Scatter(\n",
     "                x=data_frames[df_index][data_frames[df_index].columns[0]],\n",
-    "                y=data_frames[df_index][data_frames[df_index].columns[i]],\n",
-    "                opacity=1.0, \n",
-    "                hoverinfo=\"none\",\n",
+    "                y=data_frames[df_index][data_frames[df_index].columns[i]],                \n",
     "                xaxis=(\"x\" + str(df_index + 1)),\n",
     "                yaxis=(\"y\" + str(df_index + 1)),\n",
-    "                name=data_frames[df_index].columns[i]\n",
+    "                name=str(data_frames[df_index].columns[i])\n",
     "            ) for df_index in range(0, len(data_frames)) \n",
     "            for i in range(1,data_frames[df_index].columns.size)\n",
     "    ]\n",
@@ -103,10 +74,8 @@
     "    data = [        \n",
     "            go.Scatter(\n",
     "                x=data_frame[data_frame.columns[0]],\n",
-    "                y=data_frame[data_frame.columns[i]],\n",
-    "                opacity=1.0,\n",
-    "                name=data_frame.columns[i],\n",
-    "                hoverinfo=\"none\",\n",
+    "                y=data_frame[data_frame.columns[i]],                \n",
+    "                name=str(data_frame.columns[i])                \n",
     "            ) \n",
     "            for i in range(1,data_frame.columns.size)\n",
     "            \n",
@@ -145,8 +114,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "extensions": {
-    },
+    "extensions": {},
     "hide_input": true,
     "init_cell": true
    },
@@ -159,8 +127,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "extensions": {
-    },
+    "extensions": {},
     "hide_input": true,
     "init_cell": true
    },
@@ -184,8 +151,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "extensions": {
-    },
+    "extensions": {},
     "hide_input": true,
     "init_cell": true
    },
@@ -264,8 +230,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "extensions": {
-    },
+    "extensions": {},
     "hide_input": true,
     "init_cell": true
    },
@@ -277,8 +242,7 @@
  ],
  "metadata": {
   "celltoolbar": "Initialization Cell",
-  "extensions": {
-  },
+  "extensions": {},
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
