--- a/services/dy-2Dgraph/use-cases/cc/cc-twod/notebook/cc_2d.ipynb
+++ b/services/dy-2Dgraph/use-cases/cc/cc-twod/notebook/cc_2d.ipynb
@@ -1,39 +1,13 @@
 {
  "cells": [
-   {
+  {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {
     "hideoutput": true,
     "init_cell": true
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<script>\n",
-       "code_show=true; \n",
-       "function code_toggle() {\n",
-       " if (code_show){\n",
-       " $('div.input').hide();\n",
-       " } else {\n",
-       " $('div.input').show();\n",
-       " }\n",
-       " code_show = !code_show\n",
-       "} \n",
-       "$( document ).ready(code_toggle);\n",
-       "</script>\n",
-       "<form action=\"javascript:code_toggle()\"><input type=\"submit\" value=\"Click here to toggle on/off the raw code.\"></form>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "execution_count": 32,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from IPython.display import HTML\n",
     "\n",
@@ -68,10 +42,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "extensions": {
-    },
+    "extensions": {},
     "hide_input": true,
-    "init_cell": true    
+    "init_cell": true
    },
    "outputs": [],
    "source": [
@@ -82,8 +55,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "extensions": {
-    },
+    "extensions": {},
     "hide_input": true,
     "init_cell": true
    },
@@ -103,8 +75,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "extensions": {
-    },
+    "extensions": {},
     "hide_input": true,
     "init_cell": true
    },
@@ -121,8 +92,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "extensions": {
-    },
+    "extensions": {},
     "hide_input": true,
     "init_cell": true
    },
@@ -172,8 +142,7 @@
  ],
  "metadata": {
   "celltoolbar": "Initialization Cell",
-  "extensions": {
-  },
+  "extensions": {},
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
