fixed path to inputs/outputs

--- a/services/dy-jupyter/notebooks/notebook.ipynb
+++ b/services/dy-jupyter/notebooks/notebook.ipynb
@@ -8,15 +8,15 @@
     "\n",
     "### Kernel agnostic access to the node input/output ports\n",
     "\n",
-    "Input data is automatically downloaded to __/inputs/__\n",
-    "- port of type file is available in: __/inputs/MyPortKey/__\n",
+    "Input data is automatically downloaded to __~/inputs/__\n",
+    "- port of type file is available in: __~/inputs/MyPortKey/__\n",
     "  In case of compressed file (zip or tgz) the uncompressed files are available in the folder\n",
-    "- port of any other type (number, integer, string) is available in: __/inputs/key_values.json__  \n",
+    "- port of any other type (number, integer, string) is available in: __~/inputs/key_values.json__  \n",
     "\n",
-    "Output data is automatically uploaded from __/outputs/__\n",
-    "- port of type file shall be saved to: __/outputs/MyPortKey/__\n",
+    "Output data is automatically uploaded from __~/outputs/__\n",
+    "- port of type file shall be saved to: __~/outputs/MyPortKey/__\n",
     "  In case of multiple files, they will be automatically compressed and uploaded.\n",
-    "- port of any other type (number, integer, string) shall be saved in: __/outputs/key_values.json__\n",
+    "- port of any other type (number, integer, string) shall be saved in: __~/outputs/key_values.json__\n",
     "  ```\n",
     "  #key_values.json\n",
     "  {\n",
@@ -49,6 +49,13 @@
     "await PORTS.outputs[0].set(dummy_file_path)\n",
     "```"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
